--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "framer-motion": "^4",
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.11.0"
   }
 }
