--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@emotion/styled": "^11",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "eslint-config-next": "^12.3.4",
     "framer-motion": "^4",
-    "next": "^14.0.1",
+    "next": "^12.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0"
