--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.3",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@chakra-ui/react": "^1.8.9",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "eslint-config-next": "^12.3.4",
-    "framer-motion": "^4",
+    "framer-motion": "^4.1.17",
     "next": "^12.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/react-query": "^1.2.9"
   }
 }
