--- a/type/sintec-type/package.json
+++ b/type/sintec-type/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^10.16.5",
     "next": "^12.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +25,7 @@
     "@types/react-query": "^1.2.9",
     "eslint": "^8",
     "eslint-config-next": "^12.3.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "web-vitals": "^3.5.0"
   }
 }
