adicionando as tabelas de cadastros

--- a/type/sintec-type/tsconfig.json
+++ b/type/sintec-type/tsconfig.json
@@ -28,7 +28,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/components/Importacao/IndividualDataOitsx"  ],
   "exclude": [
     "node_modules"
   ]
