--- a/back/.env
+++ b/back/.env
@@ -1,7 +1,5 @@
-DB_HOST= 172.25.76.71
-DB_PORT=5432 
-DB_USER= prg_adryelle
-DB_PASS= Vs@B66Q9Sa6q
-DB_NAME= dbsintec
-
-PORT=3000
+POSTGRES_HOST= 172.25.76.71
+POSTGRES_PORT=5432 
+POSTGRES_USER= prg_adryelle
+POSTGRES_PASSWORD= Vs@B66Q9Sa6q
+POSTGRES_DB= dbsintec
