--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "nodemon --exec ts-node ./src/index.ts"
+    "dev": "nodemon --exec ts-node ./src/index.ts",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
