--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
     "reflect-metadata": "^0.1.14",
     "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "zod": "^3.22.4"
   }
 }
