pondo token no .env

--- a/back/.env
+++ b/back/.env
@@ -3,3 +3,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER= prg_adryelle
 POSTGRES_PASSWORD= Vs@B66Q9Sa6q
 POSTGRES_DB= dbsintec
+
+JWT_SECRET_KEY=my-secret
+JWT_EXPIRES_IN=24h
