--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.5",
     "next": "^12.3.4",
+    "nookies": "^2.5.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
