--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "npm": "^10.2.5",
     "npx": "^10.2.2",
